fix filter alignment in show product

--- a/demo-frontend/src/app/main/products/show-product/show-product.component.scss
+++ b/demo-frontend/src/app/main/products/show-product/show-product.component.scss
@@ -12,5 +12,5 @@ button {
     display: flex;
     max-height: 100%;
     place-content: space-between;
-    align-items: ce
+    align-items: center;
 }
